@@ -5,10 +5,12 @@ license             = Perl_5
 copyright_year      = 2005
 
 [Git::GatherDir]
+exclude_filename = LICENSE
 
 [@Filter]
 -bundle = @Basic
 -remove = GatherDir
+-remove = ExtraTests
 
 ; use V= to override; otherwise version is incremented from last tag
 [Git::NextVersion]
@@ -21,12 +23,75 @@ homepage = http://metacpan.org/module/Test::Kwalitee
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Test-Kwalitee
 bugtracker.mailto = bug-Test-Kwalitee@rt.cpan.org
 
-[Prereqs / RuntimeRequires]
-perl = 5.6.2
-Test::Simple = 0.47
-Module::CPANTS::Analyse = 0.82
+[Authority]
+authority = cpan:CHROMATIC
 
+[AutoPrereqs]
+
+[MetaNoIndex]
+directory = t
+directory = xt
+directory = examples
+
+[MetaProvides::Package]
+meta_noindex = 1
+
+[InstallGuide]
+[MetaConfig]
+[MetaJSON]
+[Git::Describe]
 [PkgVersion]
+[MinimumPerl]
+
+[CopyFilesFromBuild]
+copy = LICENSE
+
+[ReadmeAnyFromPod]
+type = markdown
+filename = README.md
+location = root
+
+[NoTabsTests]
+[EOLTests]
+[PodSyntaxTests]
+[PodCoverageTests]
+;[Test::Pod::LinkCheck]     many outstanding bugs
+[Test::Pod::No404s]
+[Test::PodSpelling]
+
+[Test::Compile]
+fail_on_warning = 1
+bail_out_on_fail = 1
+
+[Test::MinimumVersion]
+:version = 2.000003
+max_target_perl = 5.008008
+
+[MetaTests]
+[Test::CPAN::Changes]
+[Test::Version]
+[Test::ChangesHasContent]
+;[Test::Kwalitee::Extra]
+
+[Test::CheckDeps]
+:version = 0.005
+fatal = 1
+
+[CheckPrereqsIndexed]
+
+[RunExtraTests]
+
+[Git::Remote::Check]
+remote_branch = master
+
+[Git::CheckFor::CorrectBranch]
+release_branch = master
+
+[Git::CheckFor::MergeConflicts]
+
+[Git::Check]
+allow_dirty = README.md
+allow_dirty = LICENSE
 
 [NextRelease]
 :version = 4.300018
@@ -34,6 +99,8 @@ format = %-8V  %{yyyy-MM-dd HH:mm:ss ZZZZ}d (%U)
 
 [Git::Commit]
 allow_dirty = Changes
+allow_dirty = README.md
+allow_dirty = LICENSE
 commit_msg = %N-%v%t%n%n%c
 
 [Git::Tag]
