@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
     - fixed documentation to refer to the proper names of Kwalitee tests
       (RT#24506) (thanks, Gavin Sherlock!)
+    - cleaned up partially-botched distribution metadata and README
 
 1.02      2013-03-31 14:58:52 PDT-0700 (Karen Etheridge)
     - no operational changes - re-releasing under new management via github
